--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Mercury</th>
+      <th>Jupiter</th>
+      <th>Mars</th>
+      <th>Venus</th>
     </tr>
     <tr>
       <td>Images of ??</td>
@@ -23,53 +23,53 @@
       <td><img src="images/planet_4.png" alt="?"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Mass Of Each Planet</td>
+      <td>0.333kg</td>
+      <td>1898</td>
+      <td>0.642</td>
+      <td>4.87</td>
     </tr>
     <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Length Of Hours</td>
+      <td>4222.6</td>
+      <td>9.9</td>
+      <td>24.7</td>
+      <td>2802.0</td>
     </tr>
     <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Density</td>
+      <td>5429mg</td>
+      <td>1326mg</td>
+      <td>3934mg</td>
+      <td>5243mg</td>
     </tr>
     <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Diameter</td>
+      <td>4879</td>
+      <td>142,984</td>
+      <td>6792</td>
+      <td>12,104</td>
     </tr>
     <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Distance From Sun</td>
+      <td>57.9km</td>
+      <td>778.5km</td>
+      <td>228.0km</td>
+      <td>108.2km</td>
     </tr>
     <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Rotation Period</td>
+      <td>1407.6</td>
+      <td>9.9</td>
+      <td>24.6</td>
+      <td>-5832.5</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Gravity</td>
+      <td>3.7</td>
+      <td>23.1</td>
+      <td>3.7</td>
+      <td>8.9</td>
     </tr>
   </table>
 </body>
