--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Title Here</title>
+  <title>Mirrah Jade Astronomy Sheet</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
       <th>Venus</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
+      <td>Images of the Plantes</td>
       <td><iframe src="https://drive.google.com/file/d/1a8AHlZ3udJDCMlFASMjr54F4eAUJKeSy/preview" width="640" height="480" allow="autoplay"></iframe></td>
       <td><iframe src="https://drive.google.com/file/d/1uWvuKsfBKKpmLyVjI3UgfwpewBj1-3i8/preview" width="640" height="480" allow="autoplay"></iframe></td>
       <td><iframe src="https://drive.google.com/file/d/1us3cH706uYx1sg1fOTFDCbWYEQ_aMShP/preview" width="640" height="480" allow="autoplay"></iframe></td>
