--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <h1>Planetary Fact Sheet</h1>
   <table id="planets">
     <tr>
-      <th></th>
       <th>Mercury</th>
       <th>Jupiter</th>
       <th>Mars</th>
       <th>Venus</th>
     </tr>
     <tr>
-      <td>Images of the Plantes</td>
+      <td>Images of the Planets</td>
       <td><iframe src="https://drive.google.com/file/d/1pdnBxoNrVzy2n-g_nGBjQ0FC6XArhHkA/preview" width="640" height="480" allow="autoplay"></iframe></td>
       <td><iframe src="https://drive.google.com/file/d/1uWvuKsfBKKpmLyVjI3UgfwpewBj1-3i8/preview" width="640" height="480" allow="autoplay"></iframe></td>
       <td><iframe src="https://drive.google.com/file/d/1us3cH706uYx1sg1fOTFDCbWYEQ_aMShP/preview" width="640" height="480" allow="autoplay"></iframe></td>
